[package]
name = "rtpeeker"
version = "0.1.0"
edition = "2021"

[dependencies]
rtpeeker_common = { path = "./common" }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1", features = [ "full" ] }
tokio-stream = "0.1"
warp = "0.3"
futures-util = "0.3"
pcap = { version = "1.0.0", features = ["capture-stream"]}
etherparse = "0.13.0"
clap = { version = "4", features = ["derive"] }

# not using workspaces, as the crates use different targets
