[package]
name = "rtpeeker"
version = "0.1.0"
edition = "2021"
include = ["/client"]

[dependencies]
rtpeeker_common = { path = "./common", version = "0.1" }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1", features = [ "full" ] }
tokio-stream = "0.1"
warp = "0.3"
futures-util = "0.3"
pcap = { version = "1.0.0", features = ["capture-stream"]}
etherparse = "0.13.0"
clap = { version = "4", features = ["derive"] }
rust-embed = "8.0.0"
mime_guess = "2.0.4"

# not using workspaces, as the crates use different targets
