[package]
name = "rtpeeker_client"
version = "0.1.0"
edition = "2021"

[dependencies]
rtpeeker_common = { path = "../common" }
egui = "0.22.0"
egui_extras = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "default_fonts",
    "glow"
] }
log = "0.4"
wasm-bindgen-futures = "0.4"
ewebsock = "0.2"
chrono = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
