[package]
name = "rtpeeker_common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version ="1.0", features = ["derive"]}
bincode = "1.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pcap = "1.0.0"
etherparse = "0.13.0"
rtp = "0.9"
rtcp = "0.10"
webrtc-sdp = "0.3"
webrtc-util = "0.8.0"
